--- a/apps/grafana/grafana.ini
+++ b/apps/grafana/grafana.ini
@@ -7,122 +7,16 @@ check_for_updates = false
 check_for_plugin_updates = false
 feedback_links_enabled = false
 
+[dashboards]
+default_home_dashboard_path = /etc/grafana/provisioning/dashboards/logboek/logboek.json
+
 [users]
 allow_sign_up = false
 
-# Allow non admin users to create organizations
-;allow_org_create = true
-
-# Set to true to automatically assign new users to the default organization (id 1)
-;auto_assign_org = true
-
-# Set this value to automatically add new users to the provided organization (if auto_assign_org above is set to true)
-;auto_assign_org_id = 1
-
-# Default role new users will be automatically assigned
-;auto_assign_org_role = Viewer
-
-# Require email validation before sign up completes
-;verify_email_enabled = false
-
-# Background text for the user field on the login page
-;login_hint = email or username
-;password_hint = password
-
-# Default UI theme ("dark" or "light")
-;default_theme = dark
-
-# Default UI language (supported IETF language tag, such as en-US)
-;default_language = en-US
-
-# Path to a custom home page. Users are only redirected to this if the default home dashboard is used. It should match a frontend route and contain a leading slash.
-;home_page =
-
-# External user management, these options affect the organization users view
-;external_manage_link_url =
-;external_manage_link_name =
-;external_manage_info =
-
-# Viewers can edit/inspect dashboard settings in the browser. But not save the dashboard.
-;viewers_can_edit = false
-
-# Editors can administrate dashboard, folders and teams they create
-;editors_can_admin = false
-
-# The duration in time a user invitation remains valid before expiring. This setting should be expressed as a duration. Examples: 6h (hours), 2d (days), 1w (week). Default is 24h (24 hours). The minimum supported duration is 15m (15 minutes).
-;user_invite_max_lifetime_duration = 24h
-
-# Enter a comma-separated list of users login to hide them in the Grafana UI. These users are shown to Grafana admins and themselves.
-; hidden_users =
-
-
 [auth]
-# Login cookie name
-;login_cookie_name = grafana_session
-
-# Disable usage of Grafana build-in login solution.
 disable_login = true
-
-# The maximum lifetime (duration) an authenticated user can be inactive before being required to login at next visit. Default is 7 days (7d). This setting should be expressed as a duration, e.g. 5m (minutes), 6h (hours), 10d (days), 2w (weeks), 1M (month). The lifetime resets at each successful token rotation.
-;login_maximum_inactive_lifetime_duration =
-
-# The maximum lifetime (duration) an authenticated user can be logged in since login time before being required to login. Default is 30 days (30d). This setting should be expressed as a duration, e.g. 5m (minutes), 6h (hours), 10d (days), 2w (weeks), 1M (month).
-;login_maximum_lifetime_duration =
-
-# How often should auth tokens be rotated for authenticated users when being active. The default is each 10 minutes.
-;token_rotation_interval_minutes = 10
-
-# Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
 disable_login_form = true
-
-# Set to true to disable the sign out link in the side menu. Useful if you use auth.proxy or auth.jwt, defaults to false
-;disable_signout_menu = false
-
-# URL to redirect the user to after sign out
-;signout_redirect_url =
-
-# Set to true to attempt login with OAuth automatically, skipping the login screen.
-# This setting is ignored if multiple OAuth providers are configured.
-# Deprecated, use auto_login option for specific provider instead.
-;oauth_auto_login = false
-
-# OAuth state max age cookie duration in seconds. Defaults to 600 seconds.
-;oauth_state_cookie_max_age = 600
-
-# Skip forced assignment of OrgID 1 or 'auto_assign_org_id' for social logins
-# Deprecated, use skip_org_role_sync option for specific provider instead.
-;oauth_skip_org_role_update_sync = false
-
-# limit of api_key seconds to live before expiration
-;api_key_max_seconds_to_live = -1
-
-# Set to true to enable SigV4 authentication option for HTTP-based datasources.
-;sigv4_auth_enabled = false
-
-# Set to true to enable verbose logging of SigV4 request signing
-;sigv4_verbose_logging = false
-
-# Set to true to enable Azure authentication option for HTTP-based datasources.
-;azure_auth_enabled = false
-
-# Set to skip the organization role from JWT login and use system's role assignment instead.
-; skip_org_role_sync = false
-
-# Use email lookup in addition to the unique ID provided by the IdP
-;oauth_allow_insecure_email_lookup = false
-
-# Set to true to include id of identity as a response header
-;id_response_header_enabled = false
-
-# Prefix used for the id response header, X-Grafana-Identity-Id
-;id_response_header_prefix = X-Grafana
-
-# List of identity namespaces to add id response headers for, separated by space.
-# Available namespaces are user, api-key and service-account.
-# The header value will encode the namespace ("user:<id>", "api-key:<id>", "service-account:<id>")
-;id_response_header_namespaces = user api-key service-account
 
 [auth.anonymous]
 enabled = true
-# org_name = Logboek
 org_role = Admin
