--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ LOGBOEK_IMAGE=ghcr.io/minbzk/logboek-dataverwerkingen-logboek:latest
 CASSANDRA_IMAGE=cassandra:4.1
 GRAFANA_IMAGE=grafana/grafana:10.3.6
 
+BUILD_COMMIT=unknown
+
 ## Munera - Logboek
 #
 MUNERA_LOGBOEK_PORT=9001
