--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,9 +30,13 @@ jobs:
           registry: ${{ env.IMAGE_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build args
+        id: build_args
+        run: echo "commit_short_sha=$(git rev-parse --short HEAD)" >> ${GITHUB_OUTPUT}
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: ./apps/${{ matrix.app }}
+          build-args: BUILD_COMMIT=${{ steps.build_args.outputs.commit_short_sha }}
           push: ${{ github.ref_name == github.event.repository.default_branch }}
           tags: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}/${{ matrix.app }}:latest
