--- a/apps/currus/Dockerfile
+++ b/apps/currus/Dockerfile
@@ -1,5 +1,7 @@
 FROM golang:1.22.3-alpine AS build
 
+ARG BUILD_COMMIT="unknown"
+
 WORKDIR /app
 
 RUN apk add --no-cache git
@@ -10,7 +12,7 @@ RUN go mod download -x
 COPY server server
 COPY main.go .
 
-RUN go install -ldflags "-s -w" -v .
+RUN go install -ldflags "-s -w -X github.com/MinBZK/logboek-dataverwerkingen-demo/apps/currus/server.commit=${BUILD_COMMIT}" -v .
 
 
 FROM alpine:3.20.0
